--- a/html/about.html
+++ b/html/about.html
@@ -9,12 +9,13 @@
   <script src="../js/about.js" defer></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
-  <link rel="stylesheet" href="../bootstrap/js/bootstrap.js">
+  <script src="../bootstrap/js/bootstrap.js" defer></script>
   <link rel="stylesheet" href="../bootstrap/css/bootstrap.css">
 
 </head>
 
 <body id="rb-design-home">
+  
  <!--Header-->
  <header>
     <div id="rb-header">
@@ -33,84 +34,85 @@
       </div>
     </div>
    
-    <!--Section-->
-    <section class="rb-about">
-      <div class="rb-container">
-        <div class="rb-main">
-          <div class="row">
-            <div class="col-md-6 col-xs-12">
-              <img src="../fotot/image1.jpg" class="img-fluid">
-            </div>
-            <div class="col-md-6 col-xs-12">
-              <div class="rb-about-text">
-                <h1>About Us</h1>
-                <h5>Home design</h5>
-                <p>Welcome to a world, where ideas merge seamlessly with function, creating the perfect harmony in your home design. Our approach to creating living spaces goes beyond aesthetic to creating an experience that reflects your unique style and personality. From the moment you enter your home, every element is carefully selected to reflect your taste and preferences.</p>
-                <a href="https://www.quora.com/How-do-I-get-front-end-developer-experience-as-a-student"> <button type="button">Click me</button></a>
-              </div>
+  <!--Section-->
+  <section class="rb-about">
+    <div class="rb-container">
+      <div class="rb-main">
+        <div class="row">
+          <div class="col-md-6 col-xs-12">
+            <img src="../fotot/image1.jpg" class="img-fluid">
+          </div>
+          <div class="col-md-6 col-xs-12">
+            <div class="rb-about-text">
+              <h1>About Us</h1>
+              <h5>Home design</h5>
+              <p>Welcome to a world, where ideas merge seamlessly with function, creating the perfect harmony in your home design. Our approach to creating living spaces goes beyond aesthetic to creating an experience that reflects your unique style and personality. From the moment you enter your home, every element is carefully selected to reflect your taste and preferences.</p>
+              <a href="https://www.quora.com/How-do-I-get-front-end-developer-experience-as-a-student"> <button type="button">Click me</button></a>
             </div>
           </div>
         </div>
       </div>
-    </section>
-  </header>
+    </div>
+  </section>
+ 
   <!--Footer-->
-  <footer class="bg-dark text-white pt-5 pb-4">
-    <div class="container text-center text-md-left">
-      <div class="row text-center text-md-left">
-        <div class="col-md-4 col-xs-12">
-          <h5 class="text-uppercase mb-4 font-weight-bold text-light">Product</h5>
-          <p class="text-transform-uppercase">
-            <a href="https://www.thehousedesigners.com/" class="text-decoration-none text-success">Designer</a>
-          </p>
-          <p>
-            <a href="https://www.interaction-design.org/literature/topics/interaction-design" class="text-decoration-none text-info">Interactions</a>
-          </p>
-          <p>
-            <a href="https://www.sofa.com/inspiration-corner/lifestyle/how-to-make-your-home-perfect-for-hosting-home-decoration-tips/"class="text-decoration-none text-warning">Hosting</a>
-          </p>
-          <p>
-            <a href="https://www.housebeautiful.com/lifestyle/entertainment/a43220980/extreme-makeover-home-edition-behind-the-scenes-facts/" class="text-decoration-none text-danger">Edition</a>
-          </p>
-        </div>
+  <footer>
+    <footer class="bg-dark text-white pt-5 pb-4">
+      <div class="container text-center text-md-center">
+        <div class="row text-center text-md-left">
           <div class="col-md-4 col-xs-12">
-            <h5 class="text-uppercase mb-4 font-weight-bold text-light">The sites</h5>
+            <h5 class="text-uppercase mb-4 font-weight-bold text-light">Product</h5>
+            <p class="text-transform-uppercase">
+              <a href="https://www.thehousedesigners.com/" class="text-decoration-none text-white">Designer</a>
+            </p>
             <p>
-              <a href="https://www.amazon.com/home-d%C3%A9cor/b?ie=UTF8&node=1063278"class="text-warning text-decoration-none">Products</a>
+              <a href="https://www.interaction-design.org/literature/topics/interaction-design" class="text-decoration-none text-white">Interactions</a>
+            </p>
+            <p>
+              <a href="https://www.sofa.com/inspiration-corner/lifestyle/how-to-make-your-home-perfect-for-hosting-home-decoration-tips/"class="text-decoration-none text-white">Hosting</a>
+            </p>
+            <p>
+              <a href="https://www.housebeautiful.com/lifestyle/entertainment/a43220980/extreme-makeover-home-edition-behind-the-scenes-facts/" class="text-decoration-none text-white">Edition</a>
+            </p>
+          </div>
+          <div class="col-md-4 col-xs-12">
+            <h5 class="text-uppercase mb-4 font-weight-bold text-white">The sites</h5>
+            <p>
+              <a href="https://www.amazon.com/home-d%C3%A9cor/b?ie=UTF8&node=1063278"class="text-decoration-none text-white">Products</a>
            </p>
            <p>
-              <a href="https://www.dwell.com/discover/interior%20design"class="text-danger text-decoration-none">Article</a>
+              <a href="https://www.dwell.com/discover/interior%20design"class="text-decoration-none text-white">Article</a>
            </p>
             <p>
-             <a href="https://www.designtosell.com/" class="text-success text-decoration-none">Sells</a>
+             <a href="https://www.designtosell.com/" class="text-decoration-none text-white">Sells</a>
             </p>
           </div>
           <div class="col-md-4 col-xs-12">
             <h5 class="text-uppercase">Social</h5>
             <p>
-              <a href="https://www.facebook.com/" class="text-info text-decoration-none">
-                <i class="fab fa-facebook mt-2 text-capitalize"></i>Facebook</a>
+              <a href="https://www.facebook.com/" class="text-decoration-none text-white">
+                <i class="fab fa-facebook mt-2 text-capitalize"></i> Facebook</a>
             </p>
             <p>
-              <a href="https://www.instagram.com/" class="text-danger text-decoration-none">
-                <i class="fab fa-instagram mt-2 text-capitalize text-danger"></i>Instagram</a>
+              <a href="https://www.instagram.com/" class="text-decoration-none text-white">
+                <i class="fab fa-instagram mt-2 text-capitalize text-danger"></i> Instagram</a>
             </p>
             <p>
-              <a href="https://www.gmail.com/" class="text-success text-decoration-none">
-                <i class="fa fa-envelope"></i>Mail</a>
+              <a href="https://www.gmail.com/" class="text-white text-decoration-none">
+                <i class="fa fa-envelope text-primary"></i> Mail</a>
             </p>
           </div>
       </div>
 
       <hr class="mb-6">
       <div class="row align-items-center">
-        <div class="col-md-6 col-xs-12">
-          <p>&copy; Copyright 2023 All reserved by
-          <a href="../html/about.html"class="text-success text-decoration-none"><strong>Rinesa Bislimi</strong></a></p>
+        <div class="col-xs-12">
+          <p>&copy; Copyright 2024 All reserved by
+          <a href="#"class="text-decoration-none text-primary-emphasis"><strong>Rinesa Bislimi</strong></a></p>
         </div>
       </div>
     </div>
   </footer>
-
+  
 </body>
 </html>
