--- a/html/home.html
+++ b/html/home.html
@@ -1,89 +1,92 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
-    <link rel="stylesheet" href="../css/home.css">
-    <link rel="icon" href="../fotot/icon1.jpg">
-    <script src="../js/home.js" defer></script>
-    <link rel="stylesheet" href="../bootstrap/css/bootstrap.css">
-    <script src="../bootstrap/js/bootstrap.js" defer>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Home</title>
+  <link rel="stylesheet" href="../css/home.css">
+  <link rel="icon" href="../fotot/icon1.jpg">
+  <script src="../js/home.js" defer></script>
+  <link rel="stylesheet" href="../bootstrap/css/bootstrap.css">
+  <script src="../bootstrap/js/bootstrap.js"defer></script>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 </head>
+
 <body id="rb-home-design">
 
-  <nav class="navbar navbar-expand-lg bg-body-tertiary">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="#">Navbar</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">Home</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Link</a>
-          </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-              Dropdown
-            </a>
-            <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="#">Action</a></li>
-              <li><a class="dropdown-item" href="#">Another action</a></li>
-              <li><hr class="dropdown-divider"></li>
-              <li><a class="dropdown-item" href="#">Something else here</a></li>
+  <header>
+    <nav class="navbar navbar-dark bg-dark fixed-top">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#">Home Design RB'</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="offcanvas offcanvas-end text-bg-dark" tabindex="-1" id="offcanvasDarkNavbar" aria-labelledby="offcanvasDarkNavbarLabel">
+          <div class="offcanvas-header">
+            <h5 class="offcanvas-title" id="offcanvasDarkNavbarLabel">Home Design RB'</h5>
+            <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+          </div>
+          <div class="offcanvas-body">
+            <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="#">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">About</a>
+                <a class="nav-link" href="#">Services</a>
+                <a class="nav-link" href="#">Terms</a>
+              </li>
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                 Contact us
+                </a>
+                <ul class="dropdown-menu dropdown-menu-dark">
+                  <li><a class="dropdown-item" href="#">Home</a></li>
+                  <li>
+                    <hr class="dropdown-divider">
+                  </li>
+                  <li><a class="dropdown-item" href="#">Something else here</a></li>
+                </ul>
+              </li>
             </ul>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link disabled" aria-disabled="true">Disabled</a>
-          </li>
-        </ul>
-        <form class="d-flex" role="search">
-          <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-          <button class="btn btn-outline-success" type="submit">Search</button>
-        </form>
+          </div>
+        </div>
+      </div>
+    </nav>
+  </header>
+
+  <!--Header-->
+  <header>
+    <div id="rb-header">
+      <div class="rb-container">
+        <nav>
+          <img src="../fotot/icon1.jpg" class="rb-logo">
+          <ul>
+            <li><a href="../html/home.html" class="rb-nav-item"><i class="fa-solid fa-house"></i>Home</a></li>
+            <li><a href="../html/about.html" class="rb-nav-item"><i class="fa-solid fa-user"></i>About</a></li>
+            <li><a href="../html/services.html" class="rb-nav-item"><i class="fa-solid fa-paint-roller"></i>Services</a>
+              <div class="dropdown">
+                <ul>
+                  <a href="#">Language</a>
+                </ul>
+              </div>
+            </li>
+            <li><a href="../html/terms.html" class="rb-nav-item"><i class="fa-regular fa-clipboard"></i>Terms</a></li>
+            <li>
+              <a href="../html/contact.html" class="rb-nav-item"><i class="fa-solid fa-address-book"></i>Contact</a>
+              <div class="dropdown">
+                <a href="#">Login </a>
+                <a href="#">Sign up</a>
+              </div>
+            </li>
+            <li><a href="../html/inspiration.html" class="rb-nav-item"><i class="fa-solid fa-lightbulb"></i>Inspiration</a></li>
+          </ul>
+        </nav>
       </div>
     </div>
-  </nav>
-
-   <!--Header-->
-    <header>
-       <div id="rb-header">
-           <div class="rb-container">
-               <nav>
-                  <img src="../fotot/icon1.jpg" class="rb-logo">
-                   <ul>
-                      <li><a href="../html/home.html" class="rb-nav-item"><i class="fa-solid fa-house"></i>Home</a></li>
-                      <li><a href="../html/about.html" class="rb-nav-item"><i class="fa-solid fa-user"></i>About</a></li>
-                      <li><a href="../html/services.html" class="rb-nav-item"><i class="fa-solid fa-paint-roller"></i>Services</a>
-                        <div class="dropdown">
-                            <ul>
-                               <a href="#">Language</a>
-                               
-                            </ul>
-                        </div>
-                      </li>
-                      <li><a href="../html/terms.html" class="rb-nav-item"><i class="fa-regular fa-clipboard"></i>Terms</a></li>
-                      <li>
-                         <a href="../html/contact.html" class="rb-nav-item"><i class="fa-solid fa-address-book"></i>Contact</a>
-                            <div class="dropdown">
-                                <a href="#">Login </a>
-                                <a href="#">Sign up</a>
-                            </div>
-                        </li>
-                      <li><a href="../html/inspiration.html" class="rb-nav-item"><i class="fa-solid fa-lightbulb"></i>Inspiration</a></li>
-                    </ul>
-               </nav>
-            
-            </div>
-        </div>
-    </header>
-    <!--Section-->
+  </header>
+  <!--Section-->
     <section>
         <div class="rb-section-text">
             <div class="row">
@@ -98,63 +101,63 @@
     </section>
 
     <!--Footer-->
+    <footer>
+      <footer class="bg-dark text-white pt-5 pb-4">
+        <div class="container text-center text-md-center">
+          <div class="row text-center text-md-left">
+            <div class="col-md-4 col-xs-12">
+              <h5 class="text-uppercase mb-4 font-weight-bold text-light">Product</h5>
+              <p class="text-transform-uppercase">
+                <a href="https://www.thehousedesigners.com/" class="text-decoration-none text-white">Designer</a>
+              </p>
+              <p>
+                <a href="https://www.interaction-design.org/literature/topics/interaction-design" class="text-decoration-none text-white">Interactions</a>
+              </p>
+              <p>
+                <a href="https://www.sofa.com/inspiration-corner/lifestyle/how-to-make-your-home-perfect-for-hosting-home-decoration-tips/"class="text-decoration-none text-white">Hosting</a>
+              </p>
+              <p>
+                <a href="https://www.housebeautiful.com/lifestyle/entertainment/a43220980/extreme-makeover-home-edition-behind-the-scenes-facts/" class="text-decoration-none text-white">Edition</a>
+              </p>
+            </div>
+            <div class="col-md-4 col-xs-12">
+              <h5 class="text-uppercase mb-4 font-weight-bold text-white">The sites</h5>
+              <p>
+                <a href="https://www.amazon.com/home-d%C3%A9cor/b?ie=UTF8&node=1063278"class="text-decoration-none text-white">Products</a>
+             </p>
+             <p>
+                <a href="https://www.dwell.com/discover/interior%20design"class="text-decoration-none text-white">Article</a>
+             </p>
+              <p>
+               <a href="https://www.designtosell.com/" class="text-decoration-none text-white">Sells</a>
+              </p>
+            </div>
+            <div class="col-md-4 col-xs-12">
+              <h5 class="text-uppercase">Social</h5>
+              <p>
+                <a href="https://www.facebook.com/" class="text-decoration-none text-white">
+                  <i class="fab fa-facebook mt-2 text-capitalize"></i> Facebook</a>
+              </p>
+              <p>
+                <a href="https://www.instagram.com/" class="text-decoration-none text-white">
+                  <i class="fab fa-instagram mt-2 text-capitalize text-danger"></i> Instagram</a>
+              </p>
+              <p>
+                <a href="https://www.gmail.com/" class="text-white text-decoration-none">
+                  <i class="fa fa-envelope text-primary"></i> Mail</a>
+              </p>
+            </div>
+        </div>
   
-  <footer class="bg-dark text-white pt-5 pb-4">
-    <div class="container text-center text-md-left">
-      <div class="row text-center text-md-left">
-        <div class="col-md-4 col-xs-12">
-          <h5 class="text-uppercase mb-4 font-weight-bold text-light">Product</h5>
-          <p class="text-transform-uppercase">
-            <a href="https://www.thehousedesigners.com/" class="text-decoration-none text-success">Designer</a>
-          </p>
-          <p>
-            <a href="https://www.interaction-design.org/literature/topics/interaction-design" class="text-decoration-none text-info">Interactions</a>
-          </p>
-          <p>
-            <a href="https://www.sofa.com/inspiration-corner/lifestyle/how-to-make-your-home-perfect-for-hosting-home-decoration-tips/"class="text-decoration-none text-warning">Hosting</a>
-          </p>
-          <p>
-            <a href="https://www.housebeautiful.com/lifestyle/entertainment/a43220980/extreme-makeover-home-edition-behind-the-scenes-facts/" class="text-decoration-none text-danger">Edition</a>
-          </p>
-        </div>
-          <div class="col-md-4 col-xs-12">
-            <h5 class="text-uppercase mb-4 font-weight-bold text-light">The sites</h5>
-            <p>
-              <a href="https://www.amazon.com/home-d%C3%A9cor/b?ie=UTF8&node=1063278"class="text-warning text-decoration-none">Products</a>
-           </p>
-           <p>
-              <a href="https://www.dwell.com/discover/interior%20design"class="text-danger text-decoration-none">Article</a>
-           </p>
-            <p>
-             <a href="https://www.designtosell.com/" class="text-success text-decoration-none">Sells</a>
-            </p>
+        <hr class="mb-6">
+        <div class="row align-items-center">
+          <div class="col-xs-12">
+            <p>&copy; Copyright 2024 All reserved by
+            <a href="#"class="text-decoration-none text-primary-emphasis"><strong>Rinesa Bislimi</strong></a></p>
           </div>
-          <div class="col-md-4 col-xs-12">
-            <h5 class="text-uppercase">Social</h5>
-            <p>
-              <a href="https://www.facebook.com/" class="text-info text-decoration-none">
-                <i class="fab fa-facebook mt-2 text-capitalize"></i>Facebook</a>
-            </p>
-            <p>
-              <a href="https://www.instagram.com/" class="text-danger text-decoration-none">
-                <i class="fab fa-instagram mt-2 text-capitalize text-danger"></i>Instagram</a>
-            </p>
-            <p>
-              <a href="https://www.gmail.com/" class="text-success text-decoration-none">
-                <i class="fa fa-envelope"></i>Mail</a>
-            </p>
-          </div>
-      </div>
-
-      <hr>
-      <div class="row align-items-center">
-        <div class="col-md-6 col-xs-12">
-          <p>&copy; Copyright 2023 All reserved by
-          <a href="../html/about.html"class="text-success text-decoration-none"><strong>Rinesa Bislimi</strong></a></p>
-        </div>
-      </div>
+       </div>
     </div>
-  </footer>
+ </footer>
 
 </body>
 </html>
