--- a/html/languages.html
+++ b/html/languages.html
@@ -1,119 +1,134 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Languages</title>
-    <link rel="" href="../fotot/languages.jpg">
-    <link rel="stylesheet" href="../css/languages.css">
-    <link rel="stylesheet" href="../bootstrap/css/bootstrap.css">
-    <link rel="stylesheet" href="../bootstrap/js/bootstrap.js">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Languages</title>
+  <link rel="" href="../fotot/languages.jpg">
+  <link rel="stylesheet" href="../css/languages.css">
+  <link rel="stylesheet" href="../bootstrap/css/bootstrap.css">
+  <script src="../bootstrap/js/bootstrap.js" defer></script>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 </head>
+
 <body id="rb-home-design">
 
 <!--Header-->
 <header>
-
-
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#">Navbar</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDarkDropdown" aria-controls="navbarNavDarkDropdown" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNavDarkDropdown">
+        <ul class="navbar-nav">
+          <li class="nav-item dropdown">
+            <button class="btn btn-dark dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
+              Dropdown
+            </button>
+            <ul class="dropdown-menu dropdown-menu-dark">
+              <li><a class="dropdown-item" href="#">Action</a></li>
+              <li><a class="dropdown-item" href="#">Another action</a></li>
+              <li><a class="dropdown-item" href="#">Something else here</a></li>
+            </ul>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
 </header>
+
+
 <!--Section-->
 <section>
-    <div class="row">
-        <div class="col-md-4">
-           <div class="card">
-               <div class="card-body">
-                   <div class="card-title">Albanian</div>
-                       <div class="card-text">
-                          <a href="btn btn-primary">Click</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="col-md-4">
-            <div class="card">
-                <div class="card-body">
-                    <div class="card-title">English</div>
-                        <div class="card-text">
-                          <a href="btn btn-primary">Click</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="col-md-4">
-            <div class="card">
-                <div class="card-body">
-                    <div class="card-title">Deutsch</div>
-                       <div class="card-text">
-                           <a href="btn btn-primary">Click</a>
-                        </div>
-                    </div>
-               </div>
-            </div>
-        </div>
+  <div class="rb-card-container">
+    <div class="rb-card">
+      <img src="../fotot/service1.jpg" alt="foto1">
+      <div class="rb-card-content">
+        <h3>Albanian</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Non quisquam nisi doloribus quaerat, quam inventore ullam amet beatae doloremque, ipsam dolores aliquam voluptatum quis rerum? Reiciendis doloremque quasi incidunt dolor.</p>
+        <button type="button" class="btn btn-dark">Click</button>
+      </div>
     </div>
+    <div class="rb-card">
+      <img src="../fotot/service1.jpg" alt="foto1">
+      <div class="rb-card-content">
+        <h3>English</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Non quisquam nisi doloribus quaerat, quam inventore ullam amet beatae doloremque, ipsam dolores aliquam voluptatum quis rerum? Reiciendis doloremque quasi incidunt dolor.</p>
+        <button type="button" class="btn btn-dark">Click</button>
+      </div>
+    </div>
+    <div class="rb-card">
+      <img src="../fotot/service1.jpg" alt="foto1">
+      <div class="rb-card-content">
+        <h3>Card3</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Non quisquam nisi doloribus quaerat, quam inventore ullam amet beatae doloremque, ipsam dolores aliquam voluptatum quis rerum? Reiciendis doloremque quasi incidunt dolor.</p>
+        <button type="button" class="btn btn-dark">Click</button>
+      </div>
+    </div>
+  </div>
 </section>
     
 <!--Footer-->
-<footer class="bg-dark text-white pt-5 pb-4">
-    <div class="container text-center text-md-left">
+<footer>
+  <footer class="bg-dark text-white pt-5 pb-4">
+    <div class="container text-center text-md-center">
       <div class="row text-center text-md-left">
         <div class="col-md-4 col-xs-12">
           <h5 class="text-uppercase mb-4 font-weight-bold text-light">Product</h5>
           <p class="text-transform-uppercase">
-            <a href="https://www.thehousedesigners.com/" class="text-decoration-none text-success">Designer</a>
+            <a href="https://www.thehousedesigners.com/" class="text-decoration-none text-white">Designer</a>
           </p>
           <p>
-            <a href="https://www.interaction-design.org/literature/topics/interaction-design" class="text-decoration-none text-info">Interactions</a>
+            <a href="https://www.interaction-design.org/literature/topics/interaction-design" class="text-decoration-none text-white">Interactions</a>
           </p>
           <p>
-            <a href="https://www.sofa.com/inspiration-corner/lifestyle/how-to-make-your-home-perfect-for-hosting-home-decoration-tips/"class="text-decoration-none text-warning">Hosting</a>
+            <a href="https://www.sofa.com/inspiration-corner/lifestyle/how-to-make-your-home-perfect-for-hosting-home-decoration-tips/"class="text-decoration-none text-white">Hosting</a>
           </p>
           <p>
-            <a href="https://www.housebeautiful.com/lifestyle/entertainment/a43220980/extreme-makeover-home-edition-behind-the-scenes-facts/" class="text-decoration-none text-danger">Edition</a>
+            <a href="https://www.housebeautiful.com/lifestyle/entertainment/a43220980/extreme-makeover-home-edition-behind-the-scenes-facts/" class="text-decoration-none text-white">Edition</a>
           </p>
         </div>
-          <div class="col-md-4 col-xs-12">
-            <h5 class="text-uppercase mb-4 font-weight-bold text-light">The sites</h5>
-            <p>
-              <a href="https://www.amazon.com/home-d%C3%A9cor/b?ie=UTF8&node=1063278"class="text-warning text-decoration-none">Products</a>
-           </p>
-           <p>
-              <a href="https://www.dwell.com/discover/interior%20design"class="text-danger text-decoration-none">Article</a>
-           </p>
-            <p>
-             <a href="https://www.designtosell.com/" class="text-success text-decoration-none">Sells</a>
-            </p>
-          </div>
-          <div class="col-md-4 col-xs-12">
-            <h5 class="text-uppercase">Social</h5>
-            <p>
-              <a href="https://www.facebook.com/" class="text-info text-decoration-none">
-                <i class="fab fa-facebook mt-2 text-capitalize"></i>Facebook</a>
-            </p>
-            <p>
-              <a href="https://www.instagram.com/" class="text-danger text-decoration-none">
-                <i class="fab fa-instagram mt-2 text-capitalize text-danger"></i>Instagram</a>
-            </p>
-            <p>
-              <a href="https://www.gmail.com/" class="text-success text-decoration-none">
-                <i class="fa fa-envelope"></i>Mail</a>
-            </p>
-          </div>
-      </div>
+        <div class="col-md-4 col-xs-12">
+          <h5 class="text-uppercase mb-4 font-weight-bold text-white">The sites</h5>
+          <p>
+            <a href="https://www.amazon.com/home-d%C3%A9cor/b?ie=UTF8&node=1063278"class="text-decoration-none text-white">Products</a>
+         </p>
+         <p>
+            <a href="https://www.dwell.com/discover/interior%20design"class="text-decoration-none text-white">Article</a>
+         </p>
+          <p>
+           <a href="https://www.designtosell.com/" class="text-decoration-none text-white">Sells</a>
+          </p>
+        </div>
+        <div class="col-md-4 col-xs-12">
+          <h5 class="text-uppercase">Social</h5>
+          <p>
+            <a href="https://www.facebook.com/" class="text-decoration-none text-white">
+              <i class="fab fa-facebook mt-2 text-capitalize"></i> Facebook</a>
+          </p>
+          <p>
+            <a href="https://www.instagram.com/" class="text-decoration-none text-white">
+              <i class="fab fa-instagram mt-2 text-capitalize text-danger"></i> Instagram</a>
+          </p>
+          <p>
+            <a href="https://www.gmail.com/" class="text-white text-decoration-none">
+              <i class="fa fa-envelope text-primary"></i> Mail</a>
+          </p>
+        </div>
+    </div>
 
-      <hr class="mb-6">
-      <div class="row align-items-center">
-        <div class="col-md-6 col-xs-12">
-          <p>&copy; Copyright 2023 All reserved by
-          <a href="../html/about.html"class="text-success text-decoration-none"><strong>Rinesa Bislimi</strong></a></p>
-        </div>
+    <hr class="mb-6">
+    <div class="row align-items-center">
+      <div class="col-xs-12">
+        <p>&copy; Copyright 2024 All reserved by
+        <a href="#"class="text-decoration-none text-primary-emphasis"><strong>Rinesa Bislimi</strong></a></p>
       </div>
     </div>
-  </footer>
-   
+  </div>
+</footer>
+
 </body>
 </html>
