--- a/html/services.html
+++ b/html/services.html
@@ -7,110 +7,126 @@
     <link rel="icon" href="">
     <link rel="stylesheet" href="../css/services.css">
     <link rel="stylesheet" href="../bootstrap/css/bootstrap.css">
-    <link rel="stylesheet" href="../bootstrap/js/bootstrap.js">
+    <script src="../bootstrap/js/bootstrap.js"defer></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
   </head>
 
-  <body id="rb-home-design">
+<body id="rb-home-design">
 
-    <!--Header-->
-    <header>
-
-
-    </header>
-
-    <!--Section-->
-    <section class="rb-services" id="rb-services">
-      <div class="rb-services-home">
-        <h1>My <span>Services</span></h1>
-      </div>
-      <div class="row">
-       <div class="col-md-4 col-xs-12">
-          <img src="../fotot/service1.jpg">
-            <h1>Home</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus consequatur itaque suscipit asperiores quia cum neque, corporis dolores voluptatem culpa repellat veritatis aliquid! At, corporis. Quidem facilis consequatur nostrum nihil.</p>
-            <a href="#"> Download 
-              <i class="fa-solid fa-arrow-right"></i>
-            </a>
-        </div>
-        <div class="col-md-4 col-xs-12">
-          <img src="../fotot/service2.jpg">
-            <h1>Kitchen</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maiores sunt quod explicabo veritatis soluta, in quam porro earum animi voluptates eos asperiores tempora mollitia dolor odit reprehenderit officiis consequatur minima?</p>
-            <a href="#"> Download
-              <i class="fa-solid fa-arrow-right"></i>
-            </a> 
-        </div>
-        <div class="col-md-4 col-xs-12">
-          <img src="../fotot/service3.jpg">
-          <h1>Room</h1>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis rerum totam assumenda vero dolorum qui, eum commodi sed dolorem delectus itaque fuga. Sunt architecto aliquid accusantium tempora. Praesentium, libero ipsum!</p>
-          <a href="#">Download
-            <i class="fa-solid fa-arrow-right"></i>
-          </a>
+  <!--Header-->
+  <header>
+      
+  </header>
+  <!--Section-->
+  <div id="carouselExampleCaptions" class="carousel slide">
+    <div class="carousel-indicators">
+      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="3" aria-label="Slide 4"></button>
+    </div>
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img src="../fotot/service1.jpg" class="d-block w-100 height-50 " alt="foto1">
+        <div class="carousel-caption d-none d-md-block">
+          <h5 class="text-dark font-weight-bold text-bg-light">Living room</h5>
+          <p class="text-dark text-bg-light">hello</p>
         </div>
       </div>
-    </section>
+      <div class="carousel-item">
+        <img src="../fotot/service2.jpg" class="d-block w-100 height-50" alt="foto2">
+        <div class="carousel-caption d-none d-md-block text-danger">
+          <h5 class="text-white text-bg-dark font-weight-bold">Kitchen</h5>
+          <p class="text-white text-bg-dark">Some representative placeholder content for the second slide.</p>
+        </div>
+      </div>
+      <div class="carousel-item">
+        <img src="../fotot/service3.jpg" class="d-block w-100 height-50" alt="foto3">
+        <div class="carousel-caption d-none d-md-block">
+          <h5>Room</h5>
+          <p>Some representative placeholder content for the third slide.</p>
+        </div>
+      </div>
+      <div class="carousel-item">
+        <img src="../fotot/service4.jpg" class="d-block w-100 height-50" alt="foto4">
+        <div class="carousel-caption d-none d-md-block">
+          <h5>Bathroom</h5>
+          <p>Some representative placeholder content for the third slide.</p>
+        </div>
+      </div>
+    </div>
+    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Previous</span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Next</span>
+    </button>
+  </div>
 
-  <!-- Footer -->     
-   <footer class="bg-dark text-white pt-5 pb-4">
-      <div class="container text-center text-md-left">
+
+  <!-- Footer -->
+  <footer>
+    <footer class="bg-dark text-white pt-5 pb-4">
+      <div class="container text-center text-md-center">
         <div class="row text-center text-md-left">
           <div class="col-md-4 col-xs-12">
             <h5 class="text-uppercase mb-4 font-weight-bold text-light">Product</h5>
             <p class="text-transform-uppercase">
-              <a href="https://www.thehousedesigners.com/" class="text-decoration-none text-success">Designer</a>
+              <a href="https://www.thehousedesigners.com/" class="text-decoration-none text-white">Designer</a>
             </p>
             <p>
-              <a href="https://www.interaction-design.org/literature/topics/interaction-design" class="text-decoration-none text-info">Interactions</a>
+              <a href="https://www.interaction-design.org/literature/topics/interaction-design" class="text-decoration-none text-white">Interactions</a>
             </p>
             <p>
-              <a href="https://www.sofa.com/inspiration-corner/lifestyle/how-to-make-your-home-perfect-for-hosting-home-decoration-tips/"class="text-decoration-none text-warning">Hosting</a>
+              <a href="https://www.sofa.com/inspiration-corner/lifestyle/how-to-make-your-home-perfect-for-hosting-home-decoration-tips/"class="text-decoration-none text-white">Hosting</a>
             </p>
             <p>
-              <a href="https://www.housebeautiful.com/lifestyle/entertainment/a43220980/extreme-makeover-home-edition-behind-the-scenes-facts/" class="text-decoration-none text-danger">Edition</a>
-            </p> 
+              <a href="https://www.housebeautiful.com/lifestyle/entertainment/a43220980/extreme-makeover-home-edition-behind-the-scenes-facts/" class="text-decoration-none text-white">Edition</a>
+            </p>
           </div>
           <div class="col-md-4 col-xs-12">
-            <h5 class="text-uppercase mb-4 font-weight-bold text-light">The sites</h5>
+            <h5 class="text-uppercase mb-4 font-weight-bold text-white">The sites</h5>
             <p>
-              <a href="https://www.amazon.com/home-d%C3%A9cor/b?ie=UTF8&node=1063278"class="text-warning text-decoration-none">Products</a>
+              <a href="https://www.amazon.com/home-d%C3%A9cor/b?ie=UTF8&node=1063278"class="text-decoration-none text-white">Products</a>
            </p>
            <p>
-              <a href="https://www.dwell.com/discover/interior%20design"class="text-danger text-decoration-none">Article</a>
+              <a href="https://www.dwell.com/discover/interior%20design"class="text-decoration-none text-white">Article</a>
            </p>
-           <p>
-             <a href="https://www.designtosell.com/" class="text-success text-decoration-none">Sells</a>
+            <p>
+             <a href="https://www.designtosell.com/" class="text-decoration-none text-white">Sells</a>
             </p>
           </div>
           <div class="col-md-4 col-xs-12">
             <h5 class="text-uppercase">Social</h5>
             <p>
-              <a href="https://www.facebook.com/" class="text-info text-decoration-none">
-              <i class="fab fa-facebook mt-2 text-capitalize"></i>Facebook</a>
+              <a href="https://www.facebook.com/" class="text-decoration-none text-white">
+                <i class="fab fa-facebook mt-2 text-capitalize"></i> Facebook</a>
             </p>
             <p>
-              <a href="https://www.instagram.com/" class="text-danger text-decoration-none">
-              <i class="fab fa-instagram mt-2 text-capitalize text-danger"></i>Instagram</a>
+              <a href="https://www.instagram.com/" class="text-decoration-none text-white">
+                <i class="fab fa-instagram mt-2 text-capitalize text-danger"></i> Instagram</a>
             </p>
             <p>
-              <a href="https://www.gmail.com/" class="text-success text-decoration-none">
-              <i class="fa fa-envelope"></i>Mail</a>
+              <a href="https://www.gmail.com/" class="text-white text-decoration-none">
+                <i class="fa fa-envelope text-primary"></i> Mail</a>
             </p>
           </div>
-        </div>
+      </div>
 
-        <hr class="mb-6">
-        <div class="row align-items-center">
-          <div class="col-md-6 col-xs-12">
-              <p>&copy; Copyright 2023 All reserved by
-              <a href="../html/about.html"class="text-success text-decoration-none"><strong>Rinesa Bislimi</strong></a></p>
-            </div>
-          </div>
+      <hr class="mb-6">
+      <div class="row align-items-center">
+        <div class="col-xs-12">
+          <p>&copy; Copyright 2024 All reserved by
+          <a href="#"class="text-decoration-none text-primary-emphasis"><strong>Rinesa Bislimi</strong></a></p>
         </div>
       </div>
-    </footer>
-  </body>
+    </div>
+  </footer>
 
+
+
+</body>
 </html>
